[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/start_game/start_game.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/start_game/join_game.gd" type="Script" id=2]
[ext_resource path="res://ui/start_game/connection_dialog.tscn" type="PackedScene" id=3]

[node name="JoinGame" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="GridContainer" parent="." index="0"]
margin_bottom = 80.0

[node name="IpLabel" type="Label" parent="GridContainer" index="2"]
margin_top = 33.0
margin_right = 68.0
margin_bottom = 47.0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpLineEdit" type="LineEdit" parent="GridContainer" index="3"]
margin_left = 72.0
margin_top = 28.0
margin_right = 168.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLabel" parent="GridContainer" index="4"]
margin_top = 61.0
margin_bottom = 75.0

[node name="PortSpinBox" parent="GridContainer" index="5"]
margin_top = 56.0
margin_bottom = 80.0

[node name="ConfirmButton" parent="." index="1"]
margin_top = 84.0
margin_bottom = 104.0

[node name="ConnectionDialog" parent="." index="3" instance=ExtResource( 3 )]
